# textureSynthesis

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  README  README.md  README.txt
appli/: CMakeLists.txt  CMakeLists.txt~
appli/freesurferLabels/: CMakeLists.txt  create2DSamples.cxx  freesurferLabels.cxx
appli/optimizationTexture/: CMakeLists.txt  fDToRGB.cxx  optimizationTexture.cxx  optimizationTexture3D.cxx  optimizationTextureHDR.cxx  optimizationTextureHDR3D.cxx  viewImg.cxx  viewImgHDR.cxx  viewImgRGB.cxx  vol739394.cxx
appli/testANN/: CMakeLists.txt  testANN.cxx
appli/testFilters/: CMakeLists.txt  testAND.cxx  testAppendImages.cxx  testCarveTexture.cxx  testHistogramMatching.cxx  testITKFilters.cxx  testImageCrop.cxx  (+11 more)
appli/testStats/: CMakeLists.txt  main.cxx  testMeanShiftLumminance.cxx  testPCAMatlab.cxx  testPCAReduction.cxx
cmake/: CREAMacro_PreventInSourceBuild.cmake  UseANN.cmake  UserBuildAllOption.cmake  UserBuildDoxygenDoc.cmake  UserBuildHtmlDocFromLatex.cmake  UserBuildLatexDoc.cmake  UserConfig.cmake  UserDefineOptions.cmake  UserMacros.cmake  UserMacros.cmake~  UserRootCMakeLists.cmake  UserRootCMakeLists.cmake~  UserSetDeducedPaths.cmake
data/: CL1_WM_GR_AS10_12_13_ms79nfmbpperiplax63_2ASfd3-1RGB.mhd  CL1_WM_GR_ASMS234_3D_CT_x63_MBP-NF-apo_nawm_200_ASfd3-1.mhd  CL1_WM_GR_ASMS234_3D_CT_x63_MBP-NF-apo_nawm_200_ASfd3-1RGB.mhd  CMakeLists.txt  EnergyPlot.ods  README.txt  dataCitiesMatlab.csv  testANN.txt  testPCA.m
doc/: CMakeLists.txt  README.txt
doc/UserDocumentation/: CMakeLists.txt  UserDocumentationLinks.txt.in
doc/UserDocumentation/ISBI/: ImageSimulation_TextureSynthesis.aux  ImageSimulation_TextureSynthesis.bbl  ImageSimulation_TextureSynthesis.bib  ImageSimulation_TextureSynthesis.blg  ImageSimulation_TextureSynthesis.dvi  ImageSimulation_TextureSynthesis.tex
doc/UserDocumentation/ISBI/data/: parametres_os_vol_thresholded.xlsx
doc/UserDocumentation/ISBI/images/: 42.irm_Y_015.eps  42.irm_Y_015Mask.eps  42.irm_Y_047.eps  HistoModelIRM.eps  IRM_Original_43.eps  IRM_synth_4_074.eps  ModelESRF.eps  ModelIRM.eps  OriginalSurfaceIRM.eps  boxplots.eps  eval_morphologique_IRM_2.eps  search_phase.eps  vol.73-93-94-sliceZ.eps
doc/UserDocumentation/SCITEPRESS/: 3D_Texture_Synthesis_for_Modeling_Realistic_Organic_Tissues.aux  3D_Texture_Synthesis_for_Modeling_Realistic_Organic_Tissues.bbl  3D_Texture_Synthesis_for_Modeling_Realistic_Organic_Tissues.bib  3D_Texture_Synthesis_for_Modeling_Realistic_Organic_Tissues.blg  3D_Texture_Synthesis_for_Modeling_Realistic_Organic_Tissues.dvi  3D_Texture_Synthesis_for_Modeling_Realistic_Organic_Tissues.tex  SciTePress.sty  blueHistoObject.eps  blueHistoSample.eps  config.tex  esrf.eps  esrf1.eps  esrf1Mask.eps  esrfEvaluation.eps  esrfMask.eps  greenHistoObject.eps  greenHistoSample.eps  hepatique.eps  hepatiqueVol.eps  hepatocyte.eps  myocyte.eps  myocyteAx.eps  myocyteAxMask.eps  myocyteAxVol.eps  myocyteSgMask.eps  myocyteSgVol.eps  parametres_os_vol_thresholded.xlsx  redHistoObject.eps  redHistoSample.eps  search_sample.eps  skeletal_muscle.eps  sliceY79.eps  striescardiaques.eps  striescardiaquesVol.eps  texture3D-SRCT.eps  texture3D-SRCTSynthetic.eps  zebra.eps  zebraAx.eps  zebraSurf.eps  zebraVol.eps
doc/UserDocumentation/Sibgrapi/: IEEEtran.cls  ImageSimulation_TextureSynthesis.bib  ImageSimulation_TextureSynthesis.tex  ImageSimulation_TextureSynthesis.tex~
doc/UserDocumentation/Sibgrapi/data/: essai.mm  parametres_os_vol_thresholded -IRM CR.xlsx  parametres_os_vol_thresholded -IRM CRtemp.xlsx
doc/UserDocumentation/Sibgrapi/images/: 42.irm_Y_047Mask.eps  HistoSampleIRM.eps  IRMSampleSurface.eps  IRMSampleSurface1.eps  boxplots.eps  original0.eps  original1.eps  subimages.sty  synthetic0.eps  synthetic1.eps  vol.73-93-94-sliceX.eps  vol.73-93-94-sliceXMask.eps  vol.73-93-94-sliceZMask.eps
doc/UserDocumentation/TOPIM/: 3D_Texture_Synthesis_for_Modeling_Realistic_Organic_Tissues.tex  baposter.cls
doc/UserDoxygen/: CMakeLists.txt  CodingStyle.html  DoxyMainPage.txt.in  Doxyfile.txt.in
install/: CMakeLists.txt
lib/: CMakeLists.txt  CMakeLists.txt~
lib/ITKANNConnector/: CMakeLists.txt  CMakeLists.txt~  itkannconnector.cpp  itkannconnector.h  itksampleannconnector.cpp  itksampleannconnector.h
lib/ITKFilters/: CMakeLists.txt  CMakeLists.txt~  itkSampleMeanShiftClusteringFilter.h  itkSampleMeanShiftClusteringFilter.txx  itkdiscreteshrinkimagefilter.h  itkdiscreteshrinkimagefilter.txx  itkhistogrammatchingfilter.h  itkhistogrammatchingfilter.txx  itkimagevectortovectorimagefilter.h_  itkimagevectortovectorimagefilter.txx_  itkrandomimagegenerator.h  itkrandomimagegenerator.txx  itkrgbimagetosamplefeatures.h  itkrgbimagetosamplefeatures.txx  itkrgbimagetovector.h  itkrgbimagetovector.txx  itkrgbimagetovectorfeatures.h  itkrgbimagetovectorfeatures.txx  itktovtkimageimport.h  itktovtkimageimport.txx  itkvectordiscretegaussianimagefilter.h  itkvectordiscretegaussianimagefilter.txx  itkvectorlaplacianimagefilter.h  itkvectorlaplacianimagefilter.txx  itkvectortorgbimage.h  itkvectortorgbimage.txx  itkvtkcolortransferfunction.h  itkvtkcolortransferfunction.txx  itkx2umaprotationmatriximagefilter.h  itkx2umaprotationmatriximagefilter.txx
lib/ITKPCA/: CMakeLists.txt  CMakeLists.txt~  itksamplepcareduction.cpp  itksamplepcareduction.h  itkvectorimagetosamplefeatures.h  itkvectorimagetosamplefeatures.txx
lib/TextureSynthesis/: CMakeLists.txt  CMakeLists.txt~  itkoptimizationphase.h  itkoptimizationphase.txx  itkoptimizationtexture.h  itkoptimizationtexture.txx  itkoptimizationtexture.txx_  itkoptimizationtexture2.txx_  itksearchphase.h  itksearchphase.txx
lib/ann/: ANN.cpp  CMakeLists.txt  CMakeLists.txt~  bd_fix_rad_search.cpp  bd_pr_search.cpp  bd_search.cpp  bd_tree.cpp  bd_tree.h  brute.cpp  kd_dump.cpp  kd_fix_rad_search.cpp  kd_fix_rad_search.h  kd_pr_search.cpp  kd_pr_search.h  kd_search.cpp  kd_search.h  kd_split.cpp  kd_split.h  kd_tree.cpp  kd_tree.h  kd_util.cpp  kd_util.h  perf.cpp  pr_queue.h  pr_queue_k.h
lib/ann/ANN/: ANN.cmake  ANN.cmake~  ANN.h  ANNperf.h  ANNx.h
(+23 files in other folders)
