# Settings for macro CREA_ADVANCED_INSTALL_LIBRARY_FOR_CMAKE :

# USER! : Set the library name (global one)

  SET(LIBRARY_NAME SolidTextureSynthesis)
  SET(LIBRARY_NAME_BASE ${LIBRARY_NAME} )
  SET(${LIBRARY_NAME}_INSTALL_FOLDER ${LIBRARY_NAME})
  
# USER! : Give the list of your Librari es

SET(${LIBRARY_NAME}_LIBRARIES
        SolidTextures
   )

# USER! : Give the list of directories holding the '.h' and '.txx' to be installed

 SET(${LIBRARY_NAME}_BUILD_TREE_RELATIVE_INCLUDE_PATHS
    lib/TextureSynthesis
    #lib/ITKAdaptors
    lib/ITKFilters
    #lib/ITKANNConnector
 )

# USER! : Hands off, here!

  IF ( ${PROJECT_BINARY_DIR} STREQUAL ${EXECUTABLE_OUTPUT_PATH} )
    SET(CILFC_EXECUTABLE_OUTPUT_REL_PATH ".")
  ELSE ( ${PROJECT_BINARY_DIR} STREQUAL ${EXECUTABLE_OUTPUT_PATH} )
    FILE(RELATIVE_PATH 
      CILFC_EXECUTABLE_OUTPUT_REL_PATH
      ${PROJECT_BINARY_DIR} ${EXECUTABLE_OUTPUT_PATH})
  ENDIF ( ${PROJECT_BINARY_DIR} STREQUAL ${EXECUTABLE_OUTPUT_PATH} )

  SET(${LIBRARY_NAME}_INSTALL_TREE_RELATIVE_LIBRARY_PATHS ${CMAKE_CREA_LIB_PATH} )

  IF(UNIX)
    SET(${LIBRARY_NAME}_BUILD_TREE_RELATIVE_LIBRARY_PATHS 
      ${CILFC_EXECUTABLE_OUTPUT_REL_PATH})
  ELSE(UNIX)
    SET(${LIBRARY_NAME}_BUILD_TREE_RELATIVE_LIBRARY_PATHS 
      ${CILFC_EXECUTABLE_OUTPUT_REL_PATH})
  ENDIF(UNIX)
  SET(${LIBRARY_NAME}_INSTALL_TREE_RELATIVE_INCLUDE_PATHS include/${LIBRARY_NAME})

 
 
# USER! : Up to you again, now!
       
# USER! : Add a ADD_SUBDIRECTORY command for each one of your libraries
ADD_SUBDIRECTORY(TextureSynthesis)
#ADD_SUBDIRECTORY(ITKAdaptors)
ADD_SUBDIRECTORY(ITKFilters)
ADD_SUBDIRECTORY(ann)
ADD_SUBDIRECTORY(ITKANNConnector)
ADD_SUBDIRECTORY(ITKPCA)
#ADD_SUBDIRECTORY(ITKANNConnector)
#ADD_SUBDIRECTORY(ITKStats)
